--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="src" path="data"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/sqlite-jdbc-3.43.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
