--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="data"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/slf4j-api-1.7.36.jar"/>
-	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/sqlite-jdbc-3.43.2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/asheralacar/Downloads/jar_files (1)/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="/Users/asheralacar/Downloads/jar_files (1)/sqlite-jdbc-3.43.2.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
