--- a/.classpath
+++ b/.classpath
@@ -9,8 +9,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/asheralacar/Downloads/jar_files (1)/slf4j-api-1.7.36.jar"/>
-	<classpathentry kind="lib" path="/Users/asheralacar/Downloads/jar_files (1)/sqlite-jdbc-3.43.2.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx"/>
+	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="/Users/satyansh/Downloads/jar_files/sqlite-jdbc-3.43.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
